src/app/components/Board/Board.scss
@import "../../variables.scss";

.board {
  max-width: 100vw;
  max-height: 100vh;
  min-width: 100vw;
  min-height: 100vh;
  overflow-x: auto;
}

.board-underlay {
  position: fixed;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  z-index: -1;
  transition: background 0.3s;
}

.green .board-underlay {
  background: $green;
}

.blue .board-underlay {
  background: $blue;
}

.red .board-underlay {
  background: $red;
}

.pink .board-underlay {
  background: $pink;
}

.iframe {
  width: 400px;
  height: 100%;
  display: initial;
  position: relative;
}

.lists-wrapper {
  display: inline-flex;
  box-sizing: border-box;
  height: 100%;
  padding: 85px 5px 8px 5px;
  display: flex;
  flex-wrap: wrap;
  width: 100%;
}

.lists {
  display: inline-flex;
  align-items: flex-start;
  height: 100%;
  user-select: none;
  flex: 60%;
  width: 100%;
  margin-top: 30px;
}

.lists::-webkit-scrollbar {
  width: 10px;
  height: 10px;
  background: #ddd;
}

.lists::-webkit-scrollbar-thumb {
  border-radius: 3px;
  background: #aaa;
}

